--- a/css/style.css
+++ b/css/style.css
@@ -45,10 +45,14 @@ main{
     cursor: cell;
 }
 
+.add:hover{
+    transform: translateX(0%) scale(1.04);
+}
+
 .task-status{
     margin-top: 2rem;
     /*margin-left: 4rem;*/
-    padding: 0rem 5rem 0rem 5rem;
+    padding: 0rem 12rem 0rem 12rem;
     width: 100%;
     height: 100%;
     display: flex;
@@ -64,15 +68,32 @@ main{
     height: 35rem;
     width: 20rem;
     /*background: silver;*/
+
 }
 
 .task{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 15rem;
     height: 12rem;
     background: lightgray;
-    border-radius: 10px;
+    border-radius: 15px;
     margin-top: 1rem;
     cursor: grab;
+    padding: 1rem;
+}
+
+.container {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    min-height: 2rem;
+    width: 15rem;
+    height: 12rem;
+    /*background-color: rgb(218, 255, 194);*/
+    border-radius: 5px;
+    transform: translate(-50%, -50%);
+    cursor: move;
+    user-select: none;
 }
